# gaiaoffline

./: .flake8  .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  pytest.yaml
apidocs/: index.html
calibration-target-notebook/: index.html
docs/: README.md  apidocs.md  calibration-target-notebook.ipynb  notebook-example.ipynb
notebook-example/: index.html
search/: search_index.json
src/gaiaoffline/: __init__.py  gaiaoffline.py  utils.py
tests/: test_gaiaoffline.py
